--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
                 </div>
             </div>
             <div class="contact-righ">
-                <form>
-                    <input type="text" name="namee" placeholder="Votre nom" required>
-                    <input type="email" name="email" placeholder="Votre email" required>
+                <form action="https://formsubmit.co/jeanodon1125@gmail.com" method="POST" />
+                    <input type="text" name="Name" placeholder="Votre nom" required>
+                    <input type="email" name="Email" placeholder="Votre email" required>
                     <textarea name="message" rows="6" placeholder="Votre message"></textarea>
                     <button type="submit" class="btn">Envoyer</button>
                 </form>
