--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 </div>
             </div>
             <div class="contact-righ">
-                <form onsubmit="sendEmail(); reset(); return false;">
+                <form action="https://formsubmit.co/jeanodon1125@gmail.com" method="POST" />
                     <input type="text" name="name" placeholder="Votre nom" required>
                     <input type="email" name="email" placeholder="Votre email" required>
                     <textarea name="message" rows="6" placeholder="Votre message"></textarea>
