--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <section class="about" id="about">
     <div class="container">
         <div class="about-img">
-            <img src="/images/IMG_0271.png" alt="">
+            <img src="/images/IMG_0271.png" alt="Freelance #prestataire de service">
         </div>
 
         <div class="about-text">
